--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "webkid.io",
   "license": "MIT",
   "dependencies": {
+    "jquery": "^3.3.1",
+    "lodash": "^3.2.0",
     "normalize.css": "^3.0.3",
     "npm-run-all": "^1.3.2",
+    "redux": "^3.7.2",
     "riot": "^2.3.11",
     "riotcontrol": "0.0.1"
   },
